<resources>
    <string name="app_name">WeatherApp</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_text">Don\'t have an account? Sign up</string>
    <string name="signup">Signup</string>
    <string name="name_hint">Enter your name</string>
    <string name="confirm_password_hint">Re-enter Password</string>
    <string name="signup_button">Signup</string>
    <string name="already_have_account">Already have an account? Sign In</string>
        <string name="open_drawer">Open Drawer</string>
        <string name="close_drawer">Close Drawer</string>
        <string name="home">Home</string>
        <string name="profile">Profile</string>
        <string name="settings">Settings</string>


</resources>
