<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">  <!-- Background color -->

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp" />

    <!-- Sign-Up Title -->
    <TextView
        android:id="@+id/tvSignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <!-- Name Input Field -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUpTitle"
        android:textColorHint="@color/Dark_Gray"
        android:layout_marginBottom="16dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/yellow" />

    <!-- Email Input Field -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:textColorHint="@color/Dark_Gray"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/yellow" />

    <!-- Password Input Field -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:textColorHint="@color/Dark_Gray"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/yellow" />

    <!-- Confirm Password Input Field -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:textColorHint="@color/Dark_Gray"
        android:layout_marginBottom="16dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/yellow" />

    <!-- Sign-Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white" />

    <!-- Already Have an Account Text -->
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
